# mushu

./: README.md  explain.html  index.html  overlay.html  package-lock.json  package.json  vite.config.ts
docs/: coupon-redeem-api.md
public/: overlay.html  overlay.legacy.html
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20260502120000_init.sql
src-tauri/src/: audio.rs  clipboard.rs  db.rs  hotkey.rs  lib.rs  llm.rs  main.rs  modes.rs  overlay.rs  pipeline.rs  secrets.rs  settings.rs  transcription.rs
src/components/: ModeChip.tsx  ModeSelector.tsx  ShortcutKbd.tsx  TitleBar.tsx
src/components/layout/: NavUser.tsx  PageTransition.tsx  Sidebar.tsx
src/components/onboarding/: OnboardingWizard.tsx
src/explain/: ExplainApp.tsx
src/hooks/: useAudioLevel.ts  useDictation.ts  useHistory.ts  useOnboarding.ts  useSettings.ts  useTheme.ts
src/lib/: modes.ts  tauri.ts  theme.ts  types.ts
src/overlay/: Overlay.tsx  main.tsx  overlay.css  useAudioLevel.ts  useOverlayState.ts
src/overlay/components/: MushuReplyCard.tsx  ThinkingDots.tsx  WaveBars.tsx
src/pages/: AIFeaturesPage.tsx  AccountPage.tsx  HistoryPage.tsx  HomePage.tsx  SettingsPage.tsx
