[package]
name = "mushu"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mushu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
unicode-normalization = "0.1"
keyring = "3"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "chrono"] }

# Audio
cpal = "0.15"

# Hotkeys globales
tauri-plugin-global-shortcut = "2"

# Clipboard / simular teclado
arboard = "3"
enigo = "0.2"

# Whisper local
whisper-rs = "0.16"

# Descargar modelo Whisper + Groq API
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls", "stream"] }
futures-util = "0.3"

# Para manejar threads y estado compartido
tokio = { version = "1", features = ["full"] }
